--- a/themes/InterDead/layouts/faq/list.html
+++ b/themes/InterDead/layouts/faq/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <section class="gm-section gm-faq" id="faq">
+  <section class="gm-section gm-faq" id="faq" data-faq-root>
     <div class="gm-container">
       <h1 class="gm-section__title">{{ .Title }}</h1>
       {{ with .Description }}
