--- a/themes/InterDead/layouts/partials/header.html
+++ b/themes/InterDead/layouts/partials/header.html
@@ -15,19 +15,19 @@
         <div class="gm-header__cta" data-show="adult">
           <a
             class="gm-btn gm-btn--primary"
-            id="gm-ctaStartHeader"
             href="https://discord.gg/vAWYg3jFEp"
             rel="noopener"
             target="_blank"
+            data-header-cta="start"
           >{{ i18n "gm.ctastart" }}</a>
         </div>
         <div class="gm-header__cta" data-show="demo">
           <a
             class="gm-btn"
-            id="gm-ctaDemoHeader"
             href="https://discord.gg/vAWYg3jFEp"
             rel="noopener"
             target="_blank"
+            data-header-cta="demo"
           >{{ i18n "gm.ctademo" }}</a>
         </div>
       </div>
