--- a/themes/InterDead/layouts/partials/age-gate.html
+++ b/themes/InterDead/layouts/partials/age-gate.html
@@ -38,6 +38,7 @@
           class="gm-ageGate__langTrigger"
           type="button"
           data-modal-trigger="language"
+          data-modal-resume="true"
           aria-haspopup="dialog"
           aria-controls="gm-langModal"
           aria-label="{{ printf "%s: %s" (i18n "header.lang.label") .Site.Language.LanguageName }}"
