--- a/themes/InterDead/layouts/partials/head.html
+++ b/themes/InterDead/layouts/partials/head.html
@@ -65,8 +65,26 @@
     {{- $featureFlags := .Site.Params.featureFlags | default dict -}}
     {{- $api := .Site.Params.api | default dict -}}
     {{- $auth := .Site.Params.auth | default dict -}}
+    {{- $envBaseUrl := getenv (default "" $api.envVarBaseUrl) -}}
     <script>
-      window.__INTERDEAD_CONFIG__ = {{ dict "featureFlags" $featureFlags "api" $api "auth" $auth | jsonify | safeJS }};
+      (() => {
+        const config = {{ dict "featureFlags" $featureFlags "api" $api "auth" $auth | jsonify | safeJS }};
+        const hostname = window.location.hostname;
+        const apiBaseFromEnv = {{ $envBaseUrl | jsonify | safeJS }};
+        const envBaseMap = {
+          'dev.interdead.phantom-draft.com': config.api.devBaseUrl,
+          'staging.interdead.phantom-draft.com': config.api.stagingBaseUrl,
+          'interdead.phantom-draft.com': config.api.prodBaseUrl,
+          'localhost': config.api.devBaseUrl,
+        };
+        const selectedBaseUrl =
+          apiBaseFromEnv ||
+          config.api.baseUrl ||
+          envBaseMap[hostname] ||
+          config.api.defaultBaseUrl;
+        config.api.baseUrl = typeof selectedBaseUrl === 'string' && selectedBaseUrl ? selectedBaseUrl : '';
+        window.__INTERDEAD_CONFIG__ = config;
+      })();
     </script>
   </head>
   <body data-mode="{{ or (index .Site.Params "defaultMode") "demo" }}">
