--- a/themes/InterDead/layouts/partials/head.html
+++ b/themes/InterDead/layouts/partials/head.html
@@ -16,6 +16,9 @@
     <meta property="og:description" content="{{ . | plainify }}" />
     <meta name="twitter:description" content="{{ . | plainify }}" />
     {{- end }}
+    {{- with .Params.robots }}
+    <meta name="robots" content="{{ . }}" />
+    {{- end }}
     <link rel="canonical" href="{{ $canonical }}" />
     <meta property="og:type" content="{{ $ogType }}" />
     <meta property="og:title" content="{{ $title }}" />
@@ -110,4 +113,7 @@
       })();
     </script>
   </head>
-  <body data-mode="{{ or (index .Site.Params "defaultMode") "demo" }}">
+  <body
+    data-mode="{{ or (index .Site.Params "defaultMode") "demo" }}"
+    data-profile-url="{{ "/profile/" | relLangURL }}"
+  >
