--- a/themes/InterDead/layouts/profile/list.html
+++ b/themes/InterDead/layouts/profile/list.html
@@ -6,7 +6,7 @@
         <p class="gm-section__lead" data-i18n="profile.lead">{{ i18n "profile.lead" }}</p>
       </header>
 
-      <div class="gm-profile__layout">
+      <div class="gm-profile__layout" data-profile-authenticated>
         <div class="gm-card gm-profile__card gm-profile__card--identity" data-profile-authenticated hidden>
           <div class="gm-profile__identity">
             <div class="gm-profile__identityHeader">
@@ -33,10 +33,6 @@
               </div>
             </dl>
           </div>
-        </div>
-
-        <div class="gm-card gm-profile__card gm-profile__card--unauth" data-profile-unauthenticated>
-          <p class="gm-profile__empty" data-i18n="profile.unauthenticated">{{ i18n "profile.unauthenticated" }}</p>
         </div>
 
         <div
@@ -115,6 +111,10 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <div class="gm-card gm-profile__card gm-profile__card--unauth" data-profile-unauthenticated>
+        <p class="gm-profile__empty" data-i18n="profile.unauthenticated">{{ i18n "profile.unauthenticated" }}</p>
       </div>
     </div>
   </section>
