--- a/themes/InterDead/layouts/profile/list.html
+++ b/themes/InterDead/layouts/profile/list.html
@@ -6,8 +6,8 @@
         <p class="gm-section__lead" data-i18n="profile.lead">{{ i18n "profile.lead" }}</p>
       </header>
 
-      <div class="gm-profile__layout" data-profile-authenticated hidden>
-        <div class="gm-card gm-profile__card gm-profile__card--identity" data-profile-authenticated hidden>
+      <div class="gm-profile__layout gm-profile__layout--hidden" data-profile-authenticated>
+        <div class="gm-card gm-profile__card gm-profile__card--identity gm-profile__card--hidden" data-profile-authenticated>
           <div class="gm-profile__identity">
             <div class="gm-profile__identityHeader">
               <div class="gm-profile__identityMeta">
@@ -36,12 +36,11 @@
         </div>
 
         <div
-          class="gm-card gm-profile__card gm-profile__card--efbd"
+          class="gm-card gm-profile__card gm-profile__card--efbd gm-profile__card--hidden"
           data-profile-efbd-card
           data-efbd-empty-text="{{ i18n "profile.efbd.empty" }}"
           data-efbd-unauthenticated-text="{{ i18n "profile.efbd.unauthenticated" }}"
           data-efbd-error-text="{{ i18n "profile.efbd.error" }}"
-          hidden
         >
           <div class="gm-profile__cardHeader">
             <div>
@@ -114,7 +113,7 @@
         </div>
       </div>
 
-      <div class="gm-card gm-profile__card gm-profile__card--unauth" data-profile-unauthenticated hidden>
+      <div class="gm-card gm-profile__card gm-profile__card--unauth gm-profile__card--hidden" data-profile-unauthenticated>
         <p class="gm-profile__empty" data-i18n="profile.unauthenticated">{{ i18n "profile.unauthenticated" }}</p>
       </div>
     </div>
