--- a/themes/InterDead/layouts/partials/widgets/reviews.html
+++ b/themes/InterDead/layouts/partials/widgets/reviews.html
@@ -3,7 +3,7 @@
   {{ $reviews := $section.RegularPages.ByWeight }}
   {{ if gt (len $reviews) 0 }}
     {{ $reviews = first 3 $reviews }}
-    <section class="gm-section gm-inevitable">
+    <section class="gm-section gm-inevitable" id="reviews">
       <div class="gm-container">
         <h2 class="gm-section__title">{{ $section.Title }}</h2>
         <div class="gm-grid gm-grid--cols-3">
